added some comments

--- a/super-resolution.ipynb
+++ b/super-resolution.ipynb
@@ -20,6 +20,8 @@
     }
    ],
    "source": [
+    "# import helper function\n",
+    "\n",
     "from helper import upscale_image"
    ]
   },
@@ -47,6 +49,8 @@
     }
    ],
    "source": [
+    "# get image\n",
+    "\n",
     "!wget \"https://user-images.githubusercontent.com/12981474/40157448-eff91f06-5953-11e8-9a37-f6b5693fa03f.png\" -O original.png"
    ]
   },
@@ -74,6 +78,8 @@
     }
    ],
    "source": [
+    "# get img\n",
+    "\n",
     "!wget \"https://lh4.googleusercontent.com/-Anmw5df4gj0/AAAAAAAAAAI/AAAAAAAAAAc/6HxU8XFLnQE/photo.jpg64\" -O test.jpg"
    ]
   },
@@ -83,6 +89,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# image paths\n",
+    "\n",
     "ANIMAL_LOW_RES = \"original.png\"\n",
     "SNOW_ANIMAL_LOW_RES = \"test.jpg\""
    ]
@@ -133,6 +141,8 @@
     }
    ],
    "source": [
+    "# short documentation about helper function\n",
+    "\n",
     "upscale_image?"
    ]
   },
@@ -247,6 +257,8 @@
     }
    ],
    "source": [
+    "# Super Resolution on Test Image\n",
+    "\n",
     "upscale_image(image_path=ANIMAL_LOW_RES)"
    ]
   },
@@ -368,6 +380,8 @@
     }
    ],
    "source": [
+    "# Super Resolution on Test Image and directly saving\n",
+    "\n",
     "upscale_image(image_path=SNOW_ANIMAL_LOW_RES, save_image=True, save_img_filename=\"upscaled_img.jpg\")"
    ]
   },
@@ -404,13 +418,6 @@
     "plt.axis(\"off\")\n",
     "plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
